@@ -1,0 +1,16 @@
+title: Uniserv Service
+agents: active
+catalog: agentless
+license: GPL
+distribution: check_mk
+description:
+ This check uses a tcp connect to monitor the Uniserv Service.
+ Uniserv ( http://www.uniserv.com/ ) is a Data Management Service who offers
+ diffrent services like Address Checks, Banking Data Checks etc.
+
+ Whith this active check it is possible to querie one address and the response from
+ uniserv against a regex, or you can simply try to receive the version number from uniserv to make
+ sure that the service is reachable.
+
+ This check can be configured by Wato.
+
