@@ -1,0 +1,63 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+def check_uniserv_arguments(params):
+    args = " $HOSTADDRESS$"
+    args += " " + str(params['port'])
+    args += " " + quote_shell_string(params['service'])
+    if type(params['job']) == tuple:
+        job = params['job'][0]
+    else:
+        job = params['job']
+    if job == "version":
+        args += " VERSION" 
+    else:
+        address = params['job'][1]
+        args += " ADDRESS" 
+        args += " " + quote_shell_string(address['street'])
+        args += " " + str(address['street_no'])
+        args += " " + quote_shell_string(address['city'])
+        args += " " + quote_shell_string(address['search_regex'])
+
+    return args
+
+def check_uniserv_desc(params):
+    if type(params['job']) == tuple:
+        job = params['job'][0]
+    else:
+        job = params['job']
+    if job == "version":
+        return "Version"
+    else:
+        return "Address " + params['job'][1]['city']
+
+
+active_check_info['uniserv'] = {
+    "command_line"        : '$USER1$/check_uniserv $ARG1$',
+    "argument_function"   : check_uniserv_arguments,
+    "service_description" : check_uniserv_desc,
+}
+
